--- a/projects/ngx-split-progressbar/src/lib/ngx-split-progressbar.component.scss
+++ b/projects/ngx-split-progressbar/src/lib/ngx-split-progressbar.component.scss
@@ -10,6 +10,9 @@
   overflow: hidden;
   height: 32px;
   border-radius: 4px;
+  -moz-box-shadow: inset 0 0 2px #808080;
+  -webkit-box-shadow: inset 0 0 2px #808080;
+  box-shadow: inset 0 0 2px #808080;
 }
 
 .progress-slot {
